syntax corrections, naming corrections, path corrections

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -10,7 +10,7 @@
         <span style="margin-right:20px;">
           <img
             class="post-icon"
-            src="/public/images/posticon.png"
+            src="/images/posticon.png"
             alt="post icon">
           {{user.name}}
         </span>
@@ -18,7 +18,7 @@
         <span style="margin-right:20px;">
           <img
             class="post-icon"
-            src="/public/images/postdateicon.jpg"
+            src="/images/postdateicon.jpg"
             alt="post date icon">{{format_date date_created}}
         </span>
       </p>
