--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -10,11 +10,11 @@
       <p style="margin-bottom:0.5rem; margin-top: 10px;">
 
         <span style="margin-right:20px;">
-          <img class="post-icon" src="/public/images/posticon.png" alt="post icon"/> {{user.name}}
+          <img class="post-icon" src="/images/posticon.png" alt="post icon"/> {{user.name}}
         </span>
 
         <span style="margin-right:20px;">
-          <img class="post-icon" src="/public/images/postdateicon.jpg" alt="post date icon"/> 
+          <img class="post-icon" src="/images/postdateicon.jpg" alt="post date icon"/> 
           {{format_date date_created}}      
         </span>
       </p>
