--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,12 +3,12 @@
         <title>Itero</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        {{!-- <link rel="blog icon" type="png" href="/public/images/blogicon.png"> --}}
+        <link rel="blog icon" type="png" href=" /images/blogicon.png">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/public/css/styles.css">
+        <link rel="stylesheet" href="/css/styles.css">
     </head>
 
     <body>
@@ -23,12 +23,12 @@
                 <nav>
                     {{#if logged_in}}
                     <a href="/">Home</a>
-                    <a href="/public/js/dashboard.js">Dashboard</a>
+                    <a href="/js/dashboard.js">Dashboard</a>
                     <button class="no-button access-buttons-logout" id="logout">Logout</button>
 
                     {{else}}
                     <a href="/">Home</a>
-                    <a class="access-buttons" href="/public/js/login.js">Login</a>
+                    <a class="access-buttons" href="/login">Login</a>
                     {{/if}}
                     
                 </nav>
@@ -41,7 +41,7 @@
         </div>
 
         {{#if logged_in}}
-        <script src="/public/js/logout.js"></script>
+        <script src="/js/logout.js"></script>
         {{/if}}
 
 
