--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 * {
     font-family: 'Montserrat', sans-serif;
-    background-color: black;
+    background-color: #0b090a;
+    color:#faf9f9;
 }
