--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
             <header>
                 <div class="container d-flex justify-content-between align-items-center">
                 <h1>
-                    <a href="/">Itero</a>
+                    <a href="/" class="title">Itero</a>
                 </h1>
 
                 <nav>
