--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,7 +23,7 @@
                 <nav>
                     {{#if logged_in}}
                     <a href="/">Home</a>
-                    <a href="/js/dashboard.js">Dashboard</a>
+                    <a href="/dashboard">Dashboard</a>
                     <button class="no-button access-buttons-logout" id="logout">Logout</button>
 
                     {{else}}
