--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -10,7 +10,7 @@
       <p style="margin-bottom:0.5rem; margin-top: 10px;">
 
         <span style="margin-right:20px;">
-          <img class="post-icon" src="/images/posticon.png" alt="post icon"/> {{user.name}}
+          <img class="post-icon" src="/images/posticon.png" alt="post icon"> {{user.name}}
         </span>
 
         <span style="margin-right:20px;">
