--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,7 +5,7 @@
 
     <form class="form login-form">
       <div class="form-group mb-3">
-        <label for="email-login" class="form-label"><h6>email:</h6></label>
+        <label for="email-login" class="form-label"><h6 class="email">email:</h6></label>
         <input class="form-input-single" type="text" id="email-login">
       </div>
 
@@ -26,12 +26,12 @@
 
     <form class="form signup-form">
       <div class="form-group mb-3">
-        <label for="name-signup" class="form-label"><h6>name:</h6></label>
+        <label for="name-signup" class="form-label"><h6 class="name">name:</h6></label>
         <input class="form-input-single" type="text" id="name-signup">
       </div>
 
       <div class="form-group mb-3">
-        <label for="email-signup" class="form-label"><h6>email:</h6></label>
+        <label for="email-signup" class="form-label"><h6 class="email">email:</h6></label>
         <input class="form-input-single" type="text" id="email-signup">
       </div>
 
