--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -12,12 +12,12 @@
     <form class="new-post-form">
 
       <div class="form-group mb-3">
-        <label for="post-title" class="form-label"><h6>title:</h6></label>
+        <label for="post-title" class="form-label"><h6 class="title">title:</h6></label>
         <input class="form-input-single" type="text" id="post-title" name="post-title" />
       </div>
 
       <div class="form-group mb-3">
-        <label for="post-content" class="form-label"><h6>content:</h6></label>
+        <label for="post-content" class="form-label"><h6 class="content">content:</h6></label>
         <textarea class="form-input" id="post-content" name="post-content" rows="5"></textarea>
       </div>
       <div class="form-group">
